tests/rosetta/out/Rust/99-bottles-of-beer-2.error
rustc: exit status 1
warning: unused variable: `randInt`
  --> /tmp/99_bottles_of_beer_2.rs:66:9
   |
66 |     let randInt = move |seed: i32, n: i32| -> i32 {
   |         ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_randInt`
   |
   = note: `#[warn(unused_variables)]` on by default

warning: variable does not need to be mutable
  --> /tmp/99_bottles_of_beer_2.rs:48:17
   |
48 |             let mut s = n % 10;
   |                 ----^
   |                 |
   |                 help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` on by default

error[E0507]: cannot move out of index of `Vec<String>`
  --> /tmp/99_bottles_of_beer_2.rs:44:20
   |
44 |             return small[(n) as usize];
   |                    ^^^^^^^^^^^^^^^^^^^ move occurs because value has type `String`, which does not implement the `Copy` trait

error[E0507]: cannot move out of index of `Vec<String>`
  --> /tmp/99_bottles_of_beer_2.rs:47:25
   |
47 |             let mut t = tens[(((n as f64) / (10 as f64)) as i32) as usize];
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ move occurs because value has type `String`, which does not implement the `Copy` trait
   |
help: consider borrowing here
   |
47 |             let mut t = &tens[(((n as f64) / (10 as f64)) as i32) as usize];
   |                         +

error[E0596]: cannot borrow `w` as mutable, as it is not declared as mutable
  --> /tmp/99_bottles_of_beer_2.rs:62:13
   |
62 |             w[0] = format!("{}{}", w[0], String::from("s"));
   |             ^ cannot borrow as mutable
   |
help: consider changing this to be mutable
   |
60 |         let mut w = fields(s);
   |             +++

error[E0507]: cannot move out of index of `Vec<String>`
  --> /tmp/99_bottles_of_beer_2.rs:86:27
   |
86 |                 let tmp = a[(idx) as usize];
   |                           ^^^^^^^^^^^^^^^^^ move occurs because value has type `String`, which does not implement the `Copy` trait
   |
help: consider borrowing here
   |
86 |                 let tmp = &a[(idx) as usize];
   |                           +

error[E0507]: cannot move out of index of `Vec<String>`
  --> /tmp/99_bottles_of_beer_2.rs:87:37
   |
87 |                 a[(idx) as usize] = a[(j) as usize];
   |                                     ^^^^^^^^^^^^^^^ move occurs because value has type `String`, which does not implement the `Copy` trait

error: aborting due to 5 previous errors; 2 warnings emitted

Some errors have detailed explanations: E0507, E0596.
For more information about an error, try `rustc --explain E0507`.
